fix: add new configuration